[package]
name = "basic_sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = {version = "^1.3.34"}
[dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
]