[package]
name = "hello_win"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.windows]
version = "0.43"
features = [
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
]